user registration, extra styling

--- a/starsheet-frontend/src/app/user/user-registration/user-registration.component.html
+++ b/starsheet-frontend/src/app/user/user-registration/user-registration.component.html
@@ -19,8 +19,8 @@
       </div>
     </form>
   </div>
-  <div class="card-footer">
-    <a href="#" class="btn text-white border-light">Register</a>
+  <div class="card-footer text-right">
+    <a href="#" class="btn btn-warning btn-lg btn-block">Register</a>
   </div>
 </div>
 
