--- a/starsheet-frontend/src/app/app.component.css
+++ b/starsheet-frontend/src/app/app.component.css
@@ -1,3 +1,11 @@
 .row-full-height {
   height: 100vh;
 }
+
+.navbar-brand-color-2 {
+  color: #ffc107;
+}
+
+.navbar-brand-color-1 {
+  color: #00cfff;
+}
