member auth form added + starsheet title styling

--- a/starsheet-frontend/src/app/app.component.css
+++ b/starsheet-frontend/src/app/app.component.css
@@ -2,10 +2,10 @@
   height: 100vh;
 }
 
-.navbar-brand-color-2 {
-  color: #ffc107;
+.starsheet-title-color-1 {
+  color: #00cfff;
 }
 
-.navbar-brand-color-1 {
-  color: #00cfff;
+.starsheet-title-color-2 {
+  color: #ffc107;
 }
