--- a/starsheet-frontend/src/app/member/member-authentication/member-authentication.component.html
+++ b/starsheet-frontend/src/app/member/member-authentication/member-authentication.component.html
@@ -1,3 +1,20 @@
-<p>
-  member-authentication works!
-</p>
+<div class="card text-white bg-dark">
+  <div class="card-header">
+    <h3 class="card-title">Log in to <span class="starsheet-title-color-1">Star</span><span class="starsheet-title-color-2">Sheet</span></h3>
+  </div>
+  <div class="card-body">
+    <form>
+      <div class="form-group">
+        <label for="inputEmail">Email address</label>
+        <input type="email" class="form-control form-control-lg" id="inputEmail" placeholder="Your email">
+      </div>
+      <div class="form-group">
+        <label for="inputPassword">Password</label>
+        <input type="password" class="form-control form-control-lg" id="inputPassword" placeholder="Your Password">
+      </div>
+    </form>
+  </div>
+  <div class="card-footer text-right">
+    <a href="#" class="btn btn-warning btn-lg btn-block">Log in</a>
+  </div>
+</div>
