--- a/starsheet-frontend/src/app/app.component.html
+++ b/starsheet-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="navbar-brand"><span class="navbar-brand-color-1">Star</span><span class="navbar-brand-color-2">Sheet</span></div>
+  <div class="navbar-brand"><span class="starsheet-title-color-1">Star</span><span class="starsheet-title-color-2">Sheet</span></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
           aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
