--- a/starsheet-frontend/src/app/member/member-authentication/member-authentication.component.html
+++ b/starsheet-frontend/src/app/member/member-authentication/member-authentication.component.html
@@ -1,6 +1,6 @@
 <div class="card text-white bg-dark">
   <div class="card-header">
-    <h3 class="card-title">Log in to <span class="starsheet-title-color-1">Star</span><span class="starsheet-title-color-2">Sheet</span></h3>
+    <h3 class="card-title">Log in to StarSheet</h3>
   </div>
   <div class="card-body">
     <form>
