--- a/starsheet-frontend/src/styles.css
+++ b/starsheet-frontend/src/styles.css
@@ -2,5 +2,13 @@ body {
   background-color: dimgrey;
 }
 
+.starsheet-title-color-1 {
+  color: #00cfff;
+}
+
+.starsheet-title-color-2 {
+  color: #ffc107;
+}
+
 
 
