--- a/starsheet-frontend/src/app/user/user-registration/user-registration.component.html
+++ b/starsheet-frontend/src/app/user/user-registration/user-registration.component.html
@@ -6,7 +6,7 @@
     <form>
       <div class="form-group">
         <label for="inputUsername">Username</label>
-        <input class="form-control form-control-lg" id="inputUsername" placeholder="Enter username">
+        <input class="form-control form-control-lg" id="inputUsername" type="text" placeholder="Enter username">
       </div>
       <div class="form-group">
         <label for="inputEmail">Email address</label>
