some minor fixes + sheet overview implemented

--- a/starsheet-frontend/src/app/splash/splash.component.html
+++ b/starsheet-frontend/src/app/splash/splash.component.html
@@ -1,31 +1,38 @@
 <section class="main-content">
 
-  <div class="card text-white bg-dark">
-    <div class="card-body text-center">
+  <div class="container">
+    <div class="row row-full-height">
+      <div class="col-md-6 offset-md-3 align-self-center">
 
-      <h1 class="display-1">Welcome to StarSheet</h1>
-      <hr/>
+        <div class="card text-white bg-dark">
+          <div class="card-body text-center">
 
-      <div class="container">
-        <div class="row">
+            <h1 class="display-1">Welcome to StarSheet</h1>
+            <hr/>
 
-          <div class="col-lg-5">
-            <a routerLink="/user/registration" class="btn btn-warning btn-lg btn-block">Register</a>
+            <div class="container">
+              <div class="row">
+
+                <div class="col-lg-5">
+                  <a routerLink="/user/registration" class="btn btn-warning btn-lg btn-block">Register</a>
+                </div>
+
+                <div class="col-lg-2 align-self-center">
+                  <p class="text-center text-white display-5">or</p>
+                </div>
+
+                <div class="col-lg-5">
+                  <a routerLink="/member/authentication" class="btn btn-warning btn-lg btn-block">Log in</a>
+                </div>
+
+              </div>
+            </div>
+
           </div>
-
-          <div class="col-lg-2 align-self-center">
-            <p class="text-center text-white display-5">or</p>
-          </div>
-
-          <div class="col-lg-5">
-            <a routerLink="/member/authentication" class="btn btn-warning btn-lg btn-block">Log in</a>
-          </div>
-
         </div>
-      </div>
 
+      </div>
     </div>
   </div>
-
 
 </section>
