--- a/starsheet-frontend/src/app/app.component.html
+++ b/starsheet-frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="navbar-brand"><span class="starsheet-title-color-1">Star</span><span class="starsheet-title-color-2">Sheet</span></div>
+  <div class="navbar-brand"><span class="starsheet-title-color-1">Star</span><span
+    class="starsheet-title-color-2">Sheet</span></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
           aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -19,11 +20,5 @@
   </div>
 </nav>
 
-<div class="container">
-  <div class="row row-full-height">
-    <div class="col-md-6 offset-md-3 align-self-center">
-        <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
 
