--- a/starsheet-frontend/src/app/member/member-authentication/member-authentication.component.html
+++ b/starsheet-frontend/src/app/member/member-authentication/member-authentication.component.html
@@ -1,48 +1,56 @@
-<div class="card text-white bg-dark">
-  <form (ngSubmit)="onSubmit()" #memberAuthenticationForm="ngForm" novalidate>
-    <div class="card-header">
-      <h3 class="card-title">Log in to StarSheet</h3>
-    </div>
-    <div class="card-body">
-      <div class="form-group">
-        <label for="inputEmail">Email address</label>
-        <input type="email"
-               class="form-control form-control-lg"
-               id="inputEmail"
-               placeholder="Your email"
-               name="email"
-               [(ngModel)]="memberCredentials.email"
-               #emailModel="ngModel"
-               [ngClass]="{'is-invalid': emailModel.invalid && (emailModel.dirty || emailModel.touched), 'is-valid': emailModel.valid}"
-               required
-               minlength="5">
-        <div class="invalid-feedback">
-          Please choose a valid e-mail
-        </div>
+<div class="container">
+  <div class="row row-full-height">
+    <div class="col-md-6 offset-md-3 align-self-center">
+
+      <div class="card text-white bg-dark">
+        <form (ngSubmit)="onSubmit()" #memberAuthenticationForm="ngForm" novalidate>
+          <div class="card-header">
+            <h3 class="card-title">Log in to StarSheet</h3>
+          </div>
+          <div class="card-body">
+            <div class="form-group">
+              <label for="inputEmail">Email address</label>
+              <input type="email"
+                     class="form-control form-control-lg"
+                     id="inputEmail"
+                     placeholder="Your email"
+                     name="email"
+                     [(ngModel)]="memberCredentials.email"
+                     #emailModel="ngModel"
+                     [ngClass]="{'is-invalid': emailModel.invalid && (emailModel.dirty || emailModel.touched), 'is-valid': emailModel.valid}"
+                     required
+                     minlength="5">
+              <div class="invalid-feedback">
+                Please choose a valid e-mail
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword">Password</label>
+              <input type="password"
+                     class="form-control form-control-lg"
+                     id="inputPassword"
+                     placeholder="Your Password"
+                     name="password"
+                     [(ngModel)]="memberCredentials.password"
+                     #passwordModel="ngModel"
+                     [ngClass]="{'is-invalid': passwordModel.invalid && (passwordModel.dirty || passwordModel.touched), 'is-valid': passwordModel.valid}"
+                     required
+                     minlength="7">
+              <div class="invalid-feedback">
+                Please choose a password with a minimum length of 7
+              </div>
+            </div>
+          </div>
+          <div class="card-footer text-right">
+            <button type="submit" class="btn btn-warning btn-lg btn-block"
+                    [disabled]="!memberAuthenticationForm.form.valid || isSubmitted">
+              <span *ngIf="!isSubmitted">Log in</span>
+              <span *ngIf="isSubmitted">Processing...</span>
+            </button>
+          </div>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="inputPassword">Password</label>
-        <input type="password"
-               class="form-control form-control-lg"
-               id="inputPassword"
-               placeholder="Your Password"
-               name="password"
-               [(ngModel)]="memberCredentials.password"
-               #passwordModel="ngModel"
-               [ngClass]="{'is-invalid': passwordModel.invalid && (passwordModel.dirty || passwordModel.touched), 'is-valid': passwordModel.valid}"
-               required
-               minlength="7">
-        <div class="invalid-feedback">
-          Please choose a password with a minimum length of 7
-        </div>
-      </div>
+
     </div>
-    <div class="card-footer text-right">
-      <button type="submit" class="btn btn-warning btn-lg btn-block"
-              [disabled]="!memberAuthenticationForm.form.valid || isSubmitted">
-        <span *ngIf="!isSubmitted">Log in</span>
-        <span *ngIf="isSubmitted">Processing...</span>
-      </button>
-    </div>
-  </form>
+  </div>
 </div>
