--- a/starsheet-frontend/src/app/sheet/sheet-overview/sheet-overview.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-overview/sheet-overview.component.html
@@ -1,3 +1,22 @@
-<p>
-  sheet-overview works!
-</p>
+<div class="container">
+  <div class="row row-full-height">
+    <div class="col-md-10 offset-md-1 align-self-center">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-12 mr-auto" *ngFor="let sheet of sheets">
+            <div class="card text-white bg-dark">
+              <div class="sheet-overview-bar sheet-overview-bar-color-{{getRandomIndexForColorBar()}}"></div>
+              <div class="card-body">
+                <h5 class="card-title">{{sheet.name}}</h5>
+                <p class="card-text">{{sheet.description}}</p>
+                <a href="#" class="btn btn-warning">Open <span class="fas fa-pen"></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
