--- a/starsheet-frontend/src/app/user/user-registration/user-registration.component.html
+++ b/starsheet-frontend/src/app/user/user-registration/user-registration.component.html
@@ -1,26 +1,34 @@
-<div class="card text-white bg-dark">
-  <div class="card-header">
-    <h3 class="card-title">Register as a new user</h3>
-  </div>
-  <div class="card-body">
-    <form>
-      <div class="form-group">
-        <label for="inputUsername">Username</label>
-        <input class="form-control form-control-lg" id="inputUsername" type="text" placeholder="Enter username">
+<div class="container">
+  <div class="row row-full-height">
+    <div class="col-md-6 offset-md-3 align-self-center">
+
+      <div class="card text-white bg-dark">
+        <div class="card-header">
+          <h3 class="card-title">Register as a new user</h3>
+        </div>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="inputUsername">Username</label>
+              <input class="form-control form-control-lg" id="inputUsername" type="text" placeholder="Enter username">
+            </div>
+            <div class="form-group">
+              <label for="inputEmail">Email address</label>
+              <input type="email" class="form-control form-control-lg" id="inputEmail" aria-describedby="emailHelp"
+                     placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword">Password</label>
+              <input type="password" class="form-control form-control-lg" id="inputPassword" placeholder="Password">
+            </div>
+          </form>
+        </div>
+        <div class="card-footer text-right">
+          <a href="#" class="btn btn-warning btn-lg btn-block">Register</a>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="inputEmail">Email address</label>
-        <input type="email" class="form-control form-control-lg" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-      </div>
-      <div class="form-group">
-        <label for="inputPassword">Password</label>
-        <input type="password" class="form-control form-control-lg" id="inputPassword" placeholder="Password">
-      </div>
-    </form>
-  </div>
-  <div class="card-footer text-right">
-    <a href="#" class="btn btn-warning btn-lg btn-block">Register</a>
+
+    </div>
   </div>
 </div>
-
