--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
@@ -3,14 +3,14 @@
     <div class="col-md-12 align-self-center">
 
       <div class="container">
-        <div class="row">
+        <div class="row row-margin">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            <!--Character General Information-->
+            <app-sheet-detail-character-info></app-sheet-detail-character-info>
           </div>
         </div>
-        <div class="row">
+        <div class="row row-margin">
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <!--Ability scores-->
+            <app-sheet-detail-ability-scores></app-sheet-detail-ability-scores>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <!-- Health and Resolve -->
