added two-way binding

--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-ability-scores/ability-score-line/ability-score-line.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-ability-scores/ability-score-line/ability-score-line.component.html
@@ -3,14 +3,14 @@
            class="form-control form-control-sm"
            name="{{abilityType | lowercase}}Score"
            [(ngModel)]="score"
-           (change)="recalculateModifier()"
+           (change)="onScoreChange()"
            required></td>
 <td>{{modifier}}</td>
 <td><input type="number"
            class="form-control form-control-sm"
            name="{{abilityType | lowercase}}UpgradedScore"
            [(ngModel)]="upgradedScore"
-           (change)="recalculateUpgradedModifier()"
+           (change)="onUpgradedScoreChange()"
            required></td>
 <td>{{upgradedModifier}}</td>
 
