initial row of skills created

--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
@@ -13,7 +13,7 @@
             <app-sheet-detail-ability-scores></app-sheet-detail-ability-scores>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <!-- Health and Resolve -->
+            <app-sheet-detail-skills></app-sheet-detail-skills>
           </div>
         </div>
       </div>
