--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-skills/sheet-detail-skills.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-skills/sheet-detail-skills.component.html
@@ -1,3 +1,46 @@
-<p>
-  sheet-detail-skills works!
-</p>
+<div class="card text-white bg-dark">
+  <div class="card-header">
+    <h3 class="card-title">Skills</h3>
+  </div>
+  <div class="card-body">
+
+    <table class="table table-dark">
+      <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">Total</th>
+        <th scope="col">Ranks</th>
+        <th scope="col">Class Bonus</th>
+        <th scope="col">Ability Mod</th>
+        <th scope="col">Misc Mod</th>
+      </tr>
+      </thead>
+      <tbody>
+      <th scope="row">Acrobatics</th>
+      <td>TOTAL*</td>
+      <td><input type="number"
+                 class="form-control form-control-sm"
+                 name="acrobaticsRanks"
+                 required></td>
+      <td><input type="number"
+                 class="form-control form-control-sm"
+                 name="acrobaticsClassBonus"
+                 required></td>
+      <td><input type="number"
+                 class="form-control form-control-sm"
+                 name="acrobaticsAbilityMod"
+                 required></td>
+      <td><input type="number"
+                 class="form-control form-control-sm"
+                 name="acrobaticsMiscMod"
+                 required></td>
+      </tbody>
+    </table>
+
+  </div>
+  <div class="card-footer text-right">
+    <button type="button" class="btn btn-warning btn-block" >
+      Save
+    </button>
+  </div>
+</div>
