--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row row-full-height">
+  <div class="row">
     <div class="col-md-12 align-self-center">
 
       <div class="container">
