--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail.component.html
@@ -10,10 +10,10 @@
         </div>
         <div class="row row-margin">
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <app-sheet-detail-ability-scores></app-sheet-detail-ability-scores>
+            <app-sheet-detail-ability-scores [(allAbilityScores)]="allAbilityScores"></app-sheet-detail-ability-scores>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <app-sheet-detail-skills></app-sheet-detail-skills>
+            <app-sheet-detail-skills [allAbilityScores]="allAbilityScores"></app-sheet-detail-skills>
           </div>
         </div>
       </div>
