--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-skills/sheet-detail-skills.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-skills/sheet-detail-skills.component.html
@@ -42,8 +42,28 @@
 
   </div>
   <div class="card-footer text-right">
-    <button type="button" class="btn btn-warning btn-block">
-      Save
+    <button type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#debugModalSkills">
+      (Debug output)
     </button>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="debugModalSkills" tabindex="-1" role="dialog" aria-labelledby="debugModelLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="debugModelLabel">Debug info</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{debugInfo()}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
