some minor text and margin changes

--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-character-info/sheet-detail-character-info.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-character-info/sheet-detail-character-info.component.html
@@ -1,4 +1,4 @@
-<div class="card text-white bg-dark">
+<div class="card text-white bg-dark margin-top">
   <div class="card-header">
     <h3 class="card-title">Character information</h3>
   </div>
