--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-skills/sheet-detail-skills.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-skills/sheet-detail-skills.component.html
@@ -11,8 +11,8 @@
         <th scope="col">Total</th>
         <th scope="col">Ranks</th>
         <th scope="col">Class Bonus</th>
-        <th scope="col">Ability Mod</th>
-        <th scope="col">Misc Mod</th>
+        <th scope="col">Ability Modifier</th>
+        <th scope="col">Misc Modifier</th>
       </tr>
       </thead>
       <tbody>
