background gradient and extra styling for .card

--- a/starsheet-frontend/src/styles.css
+++ b/starsheet-frontend/src/styles.css
@@ -1,5 +1,6 @@
 body {
-  background-color: dimgrey;
+  background: #282828;
+  background: linear-gradient(to right top, #210f1d, #30232d, #523139, #733e39, #976946, #e0d54a);
 }
 
 .starsheet-title-color-1 {
@@ -14,6 +15,15 @@ body {
   height: 100vh;
 }
 
+.card {
+  -webkit-box-shadow: 10px 10px 51px -15px rgba(0,0,0,1);
+  -moz-box-shadow: 10px 10px 51px -15px rgba(0,0,0,1);
+  box-shadow: 10px 10px 51px -15px rgba(0,0,0,1);
+  border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border: 1px solid #000000;
+}
 
 
 
