--- a/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-character-info/sheet-detail-character-info.component.html
+++ b/starsheet-frontend/src/app/sheet/sheet-detail/sheet-detail-character-info/sheet-detail-character-info.component.html
@@ -2,7 +2,122 @@
   <div class="card-header">
     <h3 class="card-title">Character information</h3>
   </div>
-  <div class="card-body">
-    Character details (name, class, level, race,...) will come here
-  </div>
+  <form (ngSubmit)="onSubmit()" #characterInfoForm="ngForm" novalidate>
+    <div class="card-body">
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputName">Name</label>
+          <input type="text"
+                 class="form-control"
+                 id="inputName"
+                 placeholder="Character name"
+                 name="characterName"
+                 [(ngModel)]="characterInfo.name"
+                 #characterNameModel="ngModel"
+                 [ngClass]="{'is-invalid': characterNameModel.invalid && (characterNameModel.dirty || characterNameModel.touched), 'is-valid': characterNameModel.valid}"
+                 required
+                 minlength="1">
+          <div class="invalid-feedback">
+            Please choose a valid Name
+          </div>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputHomeworld">Homeworld</label>
+          <input type="text"
+                 class="form-control"
+                 id="inputHomeworld"
+                 placeholder="Homeworld"
+                 name="characterHomeworld"
+                 [(ngModel)]="characterInfo.homeworld"
+                 #characterHomeworldModel="ngModel"
+                 [ngClass]="{'is-invalid': characterHomeworldModel.invalid && (characterHomeworldModel.dirty || characterHomeworldModel.touched), 'is-valid': characterHomeworldModel.valid}"
+                 required
+                 minlength="1">
+          <div class="invalid-feedback">
+            Please choose a valid Homeworld
+          </div>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-4">
+          <label for="inputRace">Race</label>
+          <select id="inputRace" class="form-control">
+            <option selected>Android</option>
+            <option>Human</option>
+            <option>Vesk</option>
+            <option>...</option>
+          </select>
+        </div>
+        <div class="form-group col-md-4">
+          <label for="inputClass">Class</label>
+          <select id="inputClass" class="form-control">
+            <option selected>Mechanic</option>
+            <option>Soldier</option>
+            <option>...</option>
+          </select>
+        </div>
+        <div class="form-group col-md-4">
+          <label for="inputAlignment">Alignment</label>
+          <select id="inputAlignment" class="form-control">
+            <option selected>Chaotic Evil</option>
+            <option>Chaotic Good</option>
+            <option>...</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-4">
+          <label for="inputTheme">Theme</label>
+          <select id="inputTheme" class="form-control">
+            <option selected>Pilot</option>
+            <option>...</option>
+          </select>
+        </div>
+        <div class="form-group col-md-1">
+          <label for="inputLevel">Level</label>
+          <input type="number"
+                 class="form-control"
+                 id="inputLevel"
+                 required>
+        </div>
+        <div class="form-group col-md-1">
+          <label for="inputSpeed">Speed</label>
+          <input type="number"
+                 class="form-control"
+                 id="inputSpeed"
+                 required>
+        </div>
+        <div class="form-group col-md-1">
+          <label for="inputSize">Size</label>
+          <input type="number"
+                 class="form-control"
+                 id="inputSize"
+                 required>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="inputGender">Gender</label>
+          <select id="inputGender" class="form-control">
+            <option selected>Male</option>
+            <option>Female</option>
+            <option>Other</option>
+          </select>
+        </div>
+        <div class="form-group col-md-3">
+          <label for="inputDeity">Deity</label>
+          <input type="text"
+                 class="form-control"
+                 id="inputDeity"
+                 placeholder="Deity"
+                 required
+                 minlength="1">
+        </div>
+      </div>
+      <div class="card-footer text-right">
+        <button type="submit" class="btn btn-warning btn-lg btn-block"
+                [disabled]="!characterInfoForm.form.valid">
+          <span>Save</span>
+        </button>
+      </div>
+    </div>
+  </form>
 </div>
